// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render a List an empty data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`render a List and click on Show More 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-fFeiMQ eTnIod"
      >
        <div
          class="sc-hGPBjI byVhgN"
        >
          <div
            class="sc-bkkeKt cUEpkn"
          >
            <span
              class="sc-ieecCq dZJVmw"
            >
              Results(5)
            </span>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    Organization
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    Organization
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    Organization
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    Organization
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    Organization
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-fFeiMQ eTnIod"
    >
      <div
        class="sc-hGPBjI byVhgN"
      >
        <div
          class="sc-bkkeKt cUEpkn"
        >
          <span
            class="sc-ieecCq dZJVmw"
          >
            Results(5)
          </span>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  Organization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  Organization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  Organization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  Organization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  Organization
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`render a List with dummy data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-fFeiMQ eTnIod"
      >
        <div
          class="sc-hGPBjI byVhgN"
        >
          <div
            class="sc-bkkeKt cUEpkn"
          >
            <span
              class="sc-ieecCq dZJVmw"
            >
              Results(5)
            </span>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    User
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    User
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    User
                  </span>
                </div>
              </div>
            </div>
            <div>
              <div
                class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
              >
                <div
                  class="sc-dkPtRN cUvaGP"
                >
                  <img
                    class="sc-bdvvtL ionVky"
                    src="https://avatars.githubusercontent.com/u/131052?v=4"
                  />
                  <div
                    class="sc-jRQBWg iANpjD"
                  >
                    <h5
                      class="sc-hKwDye hWhLRG"
                    >
                      Name: 
                      asd
                    </h5>
                    <h6
                      class="sc-eCImPb hcWkvY"
                    >
                      User Email: 
                      a@email.com
                    </h6>
                    <h6>
                      Username: 
                      ads
                    </h6>
                    <p
                      class="sc-gKclnd gefYSt"
                    >
                      Company: 
                      home
                    </p>
                  </div>
                  <span
                    class="sc-iCfMLu iGnodU"
                  >
                    User
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="sc-dJjYzT fnXtUE"
          data-testid="StyledButton"
        >
          Click to show more
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-fFeiMQ eTnIod"
    >
      <div
        class="sc-hGPBjI byVhgN"
      >
        <div
          class="sc-bkkeKt cUEpkn"
        >
          <span
            class="sc-ieecCq dZJVmw"
          >
            Results(5)
          </span>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  User
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  User
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  User
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              class="sc-gsDKAQ cFOpLH sc-fotOHu clLcQV"
            >
              <div
                class="sc-dkPtRN cUvaGP"
              >
                <img
                  class="sc-bdvvtL ionVky"
                  src="https://avatars.githubusercontent.com/u/131052?v=4"
                />
                <div
                  class="sc-jRQBWg iANpjD"
                >
                  <h5
                    class="sc-hKwDye hWhLRG"
                  >
                    Name: 
                    asd
                  </h5>
                  <h6
                    class="sc-eCImPb hcWkvY"
                  >
                    User Email: 
                    a@email.com
                  </h6>
                  <h6>
                    Username: 
                    ads
                  </h6>
                  <p
                    class="sc-gKclnd gefYSt"
                  >
                    Company: 
                    home
                  </p>
                </div>
                <span
                  class="sc-iCfMLu iGnodU"
                >
                  User
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="sc-dJjYzT fnXtUE"
        data-testid="StyledButton"
      >
        Click to show more
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
